fixed spacing of switchesList

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -106,7 +106,7 @@ Form Treatment
   width: 400px;
   max-width: 100%;
   padding: 25px;
-  margin: 100px 100px;
+  margin: 100px 300px;
   background-color: rgb(209, 184, 230);
   border-radius: 3px;
   box-shadow: 0 1px 2px rgb(0, 0, 0, 0.4);
