--- a/src/components/MyListings/MyListings.css
+++ b/src/components/MyListings/MyListings.css
@@ -18,8 +18,8 @@ h3{
 
 #indPost{
     display: inline-block;
-    width: 350px;
-    height: 600px;
+    width: 370px;
+    height: 650px;
     margin-top: 5px;
     border: solid 1px black;
     margin: 5px;
