--- a/src/components/PostingsList/PostingsList.css
+++ b/src/components/PostingsList/PostingsList.css
@@ -20,7 +20,7 @@ img{
     height: 600px;
     margin-top: 5px;
     border: solid 1px black;
-    margin: 5px;
+    
     background-color:rgb(236, 219, 248);
 }
 
