--- a/src/components/SwitchList/SwitchList.css
+++ b/src/components/SwitchList/SwitchList.css
@@ -14,6 +14,7 @@ h4{
     font-size: 16px;
     padding: 10px;
     font-weight: bolder;
+
 }
 
 
@@ -30,11 +31,13 @@ h4{
 
 #displaySwitches{
     display: inline-block;
-    margin-left: 30px;
+    margin-left: 250px;
+    
 }
 
 #switchesHeader{
     font-size: 25px;
+    margin-left: 250px;
 }
 
 #switchTitle{
